Prevent stats table from overflowing through disclaimer

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -152,6 +152,12 @@ input {
   }
 }
 
+/* stats page */
+#stats-area {
+  height: 100%;
+  overflow: auto;
+}
+
 /* game page */
 
 #game-container {
